<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/log_in"
       android:title="@string/log_in"
        app:showAsAction="never"/>
    <item
        android:id="@+id/profile"
        android:title="@string/profile"
        app:showAsAction="never" />
    <item
        android:id="@+id/prev_week"
        android:title="@string/prev_week"
        app:showAsAction="never" />
    <item
        android:id="@+id/current_week"
        android:title="@string/current_week"
        app:showAsAction="never"
        android:visible="false"/>
    <item
        android:id="@+id/next_week"
        android:title="@string/next_week"
        app:showAsAction="never" />
</menu>