<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/signUpCoordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_0">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                app:boxBackgroundColor="@color/purple_0">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signUpEmailTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                app:boxBackgroundColor="@color/purple_0">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signUpPassTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/firstName"
                app:boxBackgroundColor="@color/purple_0">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signUpFirstNameTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lastName"
                app:boxBackgroundColor="@color/purple_0">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signUpLastNameTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/signUpSchoolsSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:spinnerMode="dialog" />

            <Spinner
                android:id="@+id/signUpGroupSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:spinnerMode="dialog" />

            <Button
                android:id="@+id/signUpButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sig_up" />
        </LinearLayout>


        <FrameLayout
            android:id="@+id/signUpProgressFrame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:visibility="gone">

            <ProgressBar
                android:id="@+id/signUpProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </FrameLayout>
    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>