<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/userCoordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_0">
    <Toolbar
        android:id="@+id/userToolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/purple_2">

        <TextView
            android:id="@+id/userToolBarTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/profile"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp"
            android:layout_marginTop="?attr/actionBarSize">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="4dp"

                    android:text="@string/user_information"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/userFirstNameTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:textSize="14sp"
                   />

                <TextView
                    android:id="@+id/userLastNameTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:textSize="14sp"
                   />

                <TextView
                    android:id="@+id/userSchoolTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:textSize="14sp"
                     />

                <TextView
                    android:id="@+id/userGroupTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:textSize="14sp"
                     />

                <TextView
                    android:id="@+id/userEmailTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:textSize="14sp"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/userPhotoImageView"
                    android:layout_width="115dp"
                    android:layout_height="115dp"
                    android:layout_margin="4dp"
                    android:src="@drawable/no_photo" />

                <Button
                    android:id="@+id/userChangePhotoButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/change_photo" />
            </LinearLayout>
        </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>